--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,6 @@ jobs:
   test:
     name: "Run Test"
     runs-on: ubuntu-latest
-    environment: development
 
     steps:
       - name: Check out repository
@@ -26,7 +25,9 @@ jobs:
           restore-keys: |
             artifacts-
       - name: Hardhat compile
-        run: npx hardhat compile
+        run: |
+        echo "${{ secret.EVN_FILE }}" > .env
+        npx hardhat compile
         if: steps.hardhat-cache.outputs.cache-hit != 'true'
       - name: Run test
         run: yarn run test
