--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,7 @@ jobs:
           restore-keys: |
             artifacts-
       - name: Hardhat compile
-        run: |
-          npx hardhat compile
+        run: npx hardhat compile
         if: steps.hardhat-cache.outputs.cache-hit != 'true'
       - name: Run test
         run: yarn run test
