--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
           key: artifacts-${{ hashFiles('contracts/**/*.sol') }}
           restore-keys: |
             artifacts-
+      - name: Create env file
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env 
       - name: Hardhat compile
         run: npx hardhat compile
         if: steps.hardhat-cache.outputs.cache-hit != 'true'
